# mirror-mirror

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  TEST_NOTES.md  TODO.md  install-dev.sh  install.ps1  install.sh  requirements.txt
.github/workflows/: release.yml
docs/: installer-plan.md
finetune/: check_instruments.py  generate.py  requirements.txt
installer/: license.txt  postinstall  preinstall  welcome.html
plugin/: daw_setup.py  server.py
plugin/AIMusicPlugin/: CMakeLists.txt
plugin/AIMusicPlugin/Source/: PipelineClient.cpp  PipelineClient.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
scripts/: build_discriminator_data.py  compare_discriminator.py  install_launchagent.sh  package_release.sh  run_end_to_end.sh  runpod_setup.sh  setup_venv.sh
tests/: conftest.py  test_instrument_config.py  test_server.py  test_setup.py
training/: note_discriminator.py  pre.py  spe_features.py  train.py
